src/test/ui/unresolved/unresolved-asterisk-imports.stderr
error[E0432]: unresolved import `not_existing_crate`
  --> $DIR/unresolved-asterisk-imports.rs:1:5
   |
LL | use not_existing_crate::*;
   |     ^^^^^^^^^^^^^^^^^^ maybe a missing crate `not_existing_crate`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
